2016-01-12 David Hohn <david.hohn@cern.ch>
	* remove lepton and tau SF systematic from systematic trees

2016-01-11 Peter Onyisi <ponyisi@cern.ch>
	* Some additional tweaks & fixes to lepton SF & systematics
 
2016-01-11 David Hohn <david.hohn@cern.ch>
	* more slimming
	* not even truth in Nominal tree when doing systematics
	* move initialisation of tools outside loop of sys trees
	* include tight/loose tau SFs, modelled after Peters implementation for leptons

2016-01-11 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* corrected bjet WP to 77 in CheckIsBlinded function

2016-01-10 Peter Onyisi <ponyisi@cern.ch>
	* Include lepton SF & systematics

2016-01-08 David Hohn <david.hohn@cern.ch>
	* Add MuonMC15 and ElectronLikelihoodMC15 that inherit from their top:: versions,
	  our version only override the function passTTVACuts so we have leptons without IP cuts

2016-01-08 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* add JES 19 NP and 25ns parameters and simple JER parameter to the config file

2016-01-07 David Hohn <david.hohn@cern.ch>
	* migrate to Top,2.3.39
	* enabling tau SFs from AnalysisTop, removing my private implementation
	* fill lep_*_is{Loose,Medium,Tight}
	* use new top::TauMC15, remove ttHMultilepton::TauMC15
	* use 0.91 kfactor for all Sherpa diboson samples

2016-01-06 David Hohn <david.hohn@cern.ch>
	* add config file for running Systematics: tighten object selection to strawman, add skim
	* add systematic variations of btag SF and PU event weights, only stored in nominal Tree
	* working on slimming systematic trees: no truth

2016-01-05 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* bug fix systematic trees: Variables constructor moved outside the systematic loop in ttHMultileptonLooseEventSaver.cxx

2016-01-05 David Hohn <david.hohn@cern.ch>
	* migrate to Top,2.3.37

2016-01-05 David Hohn <david.hohn@cern.ch>
	* tag ttHMultiAna-00-00-04
	* last tag to use Top,2.3.33
